@@ -231,3 +231,18 @@ address {
 .contact-icons:hover {
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(246deg) brightness(105%) contrast(102%);
 }
+
+/* media queries */
+/* tablet */
+@media (max-width: 1000px) {
+    body {
+        background: blue;
+    }
+}
+
+/* phone */
+@media (max-width: 500px) {
+    body {
+        background: green;
+    }
+}
