@@ -1,5 +1,6 @@
 8/9/25:
 
+- set up basic media query breakpoints for tablet and phone
 - adjust background accent color
 - add font style and color
 - adjust live project links to open in new tab
